--- a/.github/workflows/build-deploy.yaml
+++ b/.github/workflows/build-deploy.yaml
@@ -15,7 +15,6 @@ jobs:
       # Aquí pasas los secretos que el workflow reutilizable pueda necesitar para el build (ej. para login en un registry privado)
       REGISTRY_USERNAME: ${{ secrets.DOCKER_USERNAME }}
       REGISTRY_TOKEN: ${{ secrets.DOCKER_TOKEN }}
-    id: build_step # Importante para obtener outputs
 
   deploy:
     needs: build # Depende del job de build
@@ -23,7 +22,7 @@ jobs:
     with:
       app-name: pelado-app
       namespace: production
-      image-tag: ${{ needs.build.outputs.image-tag }} # Ejemplo de cómo usar el output del workflow reutilizable de build
+      image-tag: ${{ needs.build.outputs.image-tag }} # El workflow reutilizable debe exponer este output
     secrets:
       # Aquí pasas los secretos que el workflow reutilizable de deploy pueda necesitar (ej. KUBECONFIG)
       KUBECONFIG: ${{ secrets.KUBECONFIG }}
