--- a/.github/workflows/build-deploy.yaml
+++ b/.github/workflows/build-deploy.yaml
@@ -1,4 +1,4 @@
-name: My App CI/CD
+name: ghw-build-deploy-app1-python
 
 on:
   push:
@@ -7,22 +7,22 @@ on:
 
 jobs:
   build:
-    uses: Pelado-Nerdworks/workflows-compartidos/.github/workflows/build-docker.yaml@main # Aquí el 'main' es la rama del shared-workflows
+    uses: yagami-escobar/workflows-compartidos/.github/workflows/build-docker.yaml@main # Aquí el 'main' es la rama del shared-workflows
     with:
-      image-name: pelado-app
+      image-name: yagami-app
       dockerfile-path: ./Dockerfile
-      registry-username: pablokbs # El username ya no es secreto
+      registry-username: jhordan01 # El username ya no es secreto
     secrets:
       # Solo el token es secreto
       REGISTRY_TOKEN: ${{ secrets.DOCKER_TOKEN }}
 
   deploy:
     needs: build # Depende del job de build
-    uses: Pelado-Nerdworks/workflows-compartidos/.github/workflows/deploy-k8s.yaml@main
+    uses: yagami-escobar/workflows-compartidos/.github/workflows/deploy-k8s.yaml@main
     with:
-      deployment-name: pelado-app
+      deployment-name: yagami-app
       namespace: default
       image: ${{ needs.build.outputs.image-tag }} # El workflow reutilizable debe exponer este output
-    secrets:
-      # Aquí pasas los secretos que el workflow reutilizable de deploy pueda necesitar (ej. KUBECONFIG)
-      KUBECONFIG: ${{ secrets.KUBECONFIG }}
+    # secrets:
+    #   # Aquí pasas los secretos que el workflow reutilizable de deploy pueda necesitar (ej. KUBECONFIG)
+    #   KUBECONFIG: ${{ secrets.KUBECONFIG }}
