--- a/.github/workflows/build-deploy.yaml
+++ b/.github/workflows/build-deploy.yaml
@@ -7,7 +7,7 @@ on:
 
 jobs:
   build:
-    uses: yagami-escobar/workflows-compartidos/.github/workflows/build-docker.yaml@main # Aquí el 'main' es la rama del shared-workflows
+    uses: yagami-escobar/workflows-compartidos/.github/workflows/build-docker.yaml@main # Aquí el 'main' es la rama del shared-workflowsss
     with:
       image-name: yagami-app
       dockerfile-path: ./Dockerfile
