--- a/.github/workflows/build-deploy.yaml
+++ b/.github/workflows/build-deploy.yaml
@@ -4,7 +4,9 @@ on:
   push:
     branches:
       - main
-
+  workflow_dispatch:
+    
+    
 jobs:
   build:
     uses: yagami-escobar/workflows-compartidos/.github/workflows/build-docker.yaml@main # Aquí el 'main' es la rama del shared-workflowsss
